Przeredagowanie zmian z jdk25